<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>oss-parent</artifactId>
		<groupId>org.sonatype.oss</groupId>
		<version>9</version>
	</parent>


	<groupId>ch.rasc</groupId>
	<artifactId>sse-eventbus</artifactId>
	<version>3.0.1-SNAPSHOT</version>

	<inceptionYear>2016</inceptionYear>

	<name>Sse Eventbus Library</name>
	<url>https://github.com/ralscha/sse-eventbus/</url>
	<description>A simple eventbus library to track connected sse clients and broadcast messages</description>

	<developers>
		<developer>
			<name>Ralph Schaer</name>
			<email>ralphschaer@gmail.com</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/ralscha/sse-eventbus/issues</url>
	</issueManagement>

	<scm>
		<connection>scm:git:git@github.com:ralscha/sse-eventbus.git</connection>
		<developerConnection>scm:git:git@github.com:ralscha/sse-eventbus.git</developerConnection>
		<url>https://github.com/ralscha/sse-eventbus.git</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>7.0.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>3.0.0</version>
		</dependency>

		<dependency>
			<groupId>tools.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>3.0.4</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>value</artifactId>
			<version>2.12.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- TEST dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>4.0.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>4.0.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.launchdarkly</groupId>
			<artifactId>okhttp-eventsource</artifactId>
			<version>4.2.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.10.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>  
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
				<version>0.0.47</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<release>17</release>
					<parameters>true</parameters>
				<annotationProcessorPaths>
					<path>
						<groupId>org.immutables</groupId>
						<artifactId>value</artifactId>
						<version>2.11.7</version>
					</path>
				</annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.5.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.21.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.1.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.4.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Automatic-Module-Name>ch.rasc.sse.eventbus</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<additionalOptions>-Xdoclint:none</additionalOptions>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>5.0.0</version>
				<configuration>
					<properties>
						<year>${project.inceptionYear}</year>
						<currentYear>2022</currentYear>
					</properties>
					<licenseSets>
						<licenseSet>
							<header>${basedir}/src/main/config/header.txt</header>
							<excludes>
								<exclude>**/*.xml</exclude>
								<exclude>**/*.md</exclude>
								<exclude>**/*.py</exclude>
								<exclude>LICENSE</exclude>
								<exclude>.travis.yml</exclude>
								<exclude>**/.gitignore</exclude>
								<exclude>.factorypath</exclude>
								<exclude>.mvn/**/*</exclude>
								<exclude>mvnw.cmd</exclude>
								<exclude>mvnw</exclude>
								<exclude>.apt_generated/**</exclude>
								<exclude>.editorconfig</exclude>
								<exclude>.github/**</exclude>
							</excludes>
						</licenseSet>
					</licenseSets>
					<strictCheck>true</strictCheck>
				</configuration>
				<executions>
					<execution>
						<id>check-headers</id>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.3</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
